--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"g": "generate-react component"
 	},
 	"dependencies": {
+		"@lottiefiles/react-lottie-player": "^3.5.2",
 		"@next/font": "^13.1.1",
 		"@types/node": "18.11.17",
 		"@types/react": "18.0.26",
