--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
 	},
 	"dependencies": {
 		"@lottiefiles/react-lottie-player": "^3.5.2",
-		"@next/font": "^13.1.1",
+		"@next/font": "^13.2.4",
 		"@types/node": "18.11.17",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.10",
 		"antd": "^5.1.0",
 		"generate-react-cli": "^8.1.2",
-		"next": "13.1.0",
+		"next": "^13.2.4",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"sass": "^1.57.1",
